<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pop_up_patologia_description_formulario"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pop_up_patologia_description_formulario_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="patologia atual:"
            android:contentDescription="@string/type_of_pathology_content"
            android:labelFor="@+id/pop_up_patologia_description_formulario_editText"/>

        <MultiAutoCompleteTextView
            android:id="@+id/pop_up_patologia_description_formulario_editText"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="text"
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="text|textAutoComplete"
            android:padding="@dimen/multilined_padding"
            android:singleLine="false"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/pop_up_patologia_description_formulario_title"
            app:layout_constraintTop_toBottomOf="@+id/pop_up_patologia_description_formulario_title"
            app:layout_constraintVertical_bias="0.0"
            tools:text="MultiAutoCompleteTextView  sasudsdarfcsdegbd fvfgvasd adafgtjyfcfgerseszff gtz       " />

        <ImageButton
            android:id="@+id/pop_up_patologia_description_formulario_button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:background="@color/transparent"
            android:contentDescription="@string/trash_button_content"
            app:layout_constraintBottom_toBottomOf="@+id/pop_up_patologia_description_formulario_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/pop_up_patologia_description_formulario_title"
            app:layout_constraintTop_toTopOf="@+id/pop_up_patologia_description_formulario_title"
            app:srcCompat="@drawable/delete_28dp_button_red" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>