...
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/patient_form_activity_pathological" />

                <LinearLayout
                    android:id="@+id/patient_form_activity_pathological_layout_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="32dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/patient_form_activity_pathological_sortDivider" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/patient_form_activity_pathological_add_button"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_register"
                    android:textAllCaps="true"
                    android:textSize="14sp"
...
